# azul-audit-forwarder

./: .pyproject.toml  Dockerfile  README.md  pipeline-mirror.yaml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  tox.ini
azul_audit_forwarder/: client.py  log.py  settings.py
tests/: server.py  test_client.py
tests/testdata/: resp.json
